# fatfs_pico

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  FatFs_test.c
fatfs/: CMakeLists.txt
mmc_pico/: CMakeLists.txt  mmc_pico.c  mmc_pico.h
